Fix media queries on older browsers + fix some minor layout issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -84,7 +84,7 @@ main {
   }
 }
 
-@media (width < $mobile-width-breakpoint) {
+@media (max-width: calc($mobile-width-breakpoint - 1px)) {
   .App {
     font-size: 1.2rem;
   }
