--- a/src/pages/Portal/MissionComponent.scss
+++ b/src/pages/Portal/MissionComponent.scss
@@ -11,7 +11,7 @@
   }
 }
 
-@media (width >= $mobile-width-breakpoint) {
+@media (min-width: $mobile-width-breakpoint) {
   .mission-component {
     ul {
       margin-top: 4rem;
@@ -32,7 +32,7 @@
   }
 }
 
-@media (width < $mobile-width-breakpoint) {
+@media (max-width: calc($mobile-width-breakpoint - 1px)) {
   .mission-component {
     li {
       margin: 2rem;
